--- a/FirstTensorFlow.ipynb
+++ b/FirstTensorFlow.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TensorFlowを始めよう　メモ"
+    "<h1>TensorFlowを始めよう　メモ</h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TensorFlowの実行環境を整え、基本知識についておさらいしましょう。\n",
+    "TensorFlowの実行環境を整え、基本知識についておさらいしましょう。<br>\n",
     "Kerasのサイト https://keras.io/ja/\n",
-    "\n",
+    "<br>\n",
     "TensorFlowはKerasを土台にして開発されたライブラリです。すなわち、TensorFlowを知るとはKerasを知ることに繋がり、Kerasを知る事はニューラルネットワークを知る事に繋がります。もちろんニューラルネットワークを理解するためには数学を知っている必要があるのです。"
    ]
   },
@@ -21,9 +21,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "１　ソースコードの解読\n",
+    "<b>１　ソースコードの解読</b><br>\n",
     "\n",
-    "まず、TensorFlow.org のチュートリアルから以下のソースコードを眺めてみます"
+    "    まず、TensorFlow.org のチュートリアルから以下のソースコードを眺めてみます"
    ]
   },
   {
@@ -56,22 +56,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "このソースコードを読み解くにあたり、１行１行詳しく調べて全体を理解しようと試みます。\n",
-    "１ー１　データの入力・変換\n",
-    "＜２行目の解釈＞\n",
-    "mnist = tf.keras.datasets.mnist\n",
-    "コードの２行目からmnistという知らない英単語が出てきました。概要を理解するため以下のページを参照してみます。\n",
-    "https://en.wikipedia.org/w/index.php?title=MNIST_database\n",
-    "\n",
-    "ざっくりまとめると、ディープラーニングをするためのデータだそうです。\n",
-    "MNIST データベース　ー＞　ディープラーニング　ー＞　結果出力\n",
-    "上記の流れになると思います。\n",
-    "本来、ディープラーニングをするためのデータは統計的手法を用いて回収する必要があります。しかし、今回のケースではMNISTデータベースが元からあるそうです。\n",
-    "\n",
-    "\n",
-    "＜４行目の解釈＞\n",
-    "(x_train, y_train),(x_test, y_test) = mnist.load_data()\n",
-    "さて、４行目からタプル形式でMNISTデータを読み込みます。\n",
+    "    このソースコードを読み解くにあたり、１行１行詳しく調べて全体を理解しようと試みます。<br>\n",
+    "<b>１ー１　データの入力・変換</b><br>\n",
+    "＜２行目の解釈＞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minist = tf.keras.datasets.mnist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    コードの２行目からmnistという知らない英単語が出てきました。概要を理解するため以下のページを参照してみます。\n",
+    "    https://en.wikipedia.org/w/index.php?title=MNIST_database\n",
+    "    \n",
+    "    ざっくりまとめると、ディープラーニングをするためのデータだそうです。\n",
+    "    MNIST データベース　ー＞　ディープラーニング　ー＞　結果出力\n",
+    "    上記の流れになると思います。\n",
+    "    本来、ディープラーニングをするためのデータは統計的手法を用いて回収する必要があります。しかし、今回のケースではMNISTデータベースが元からあるそうです。\n",
+    "＜４行目の解釈＞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, y_train),(x_test, y_test) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    さて、４行目からタプル形式でMNISTデータを読み込みます。"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "＜５行目の解釈＞\n",
     "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
     "ここで、なぜデータを255.0で割っているのか気になります。そこで、調べてみることにしました。適当にインターネットを検索してすぐにたどり着いた結果が以下のURLです。\n",
@@ -148,7 +180,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "２　実行結果\n",
